# trunk

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE
base/: BUILD  flags.cc  flags.h  logging.cc  logging.h  packed.h  types.h
db/: BUILD  sstable.cc  sstable.h  sstable_test.cc
io/: BUILD  file-utils.cc  file-utils.h  file-utils_test.cc  file.h  line-reader.cc  line-reader.h  line-reader_test.cc  memory-file.cc  memory-file.h  native-file.cc  native-file.h  posix-file.cc  posix-file.h  posix-file_test.cc  stream.cc  stream.h  stream_test.cc
net/: BUILD  asio-flags.cc  asio-flags.h  asio-flags_test.cc  asio-hash.h  asio-hash_benchmark.cc  asio.h  asio_test.cc  blocking-result.h  blocking-result_test.cc  endpoint.cc  endpoint.h  endpoint_test.cc  icmp-client.cc  icmp-client.h  ip-encoding.cc  ip-encoding.h  ip-encoding_test.cc  rate-limiter.cc  rate-limiter.h  system-connector.cc  system-connector.h  timer-list.h  timer-list_test.cc
security/: BUILD  key.cc  key.h  key_test.cc  keystore.cc  keystore.h  keystore_test.cc  types.h
util/: BUILD  embed-data.cc  embed-data.h  embed-data_test.cc  fibonacci-sequence.h  fibonacci-sequence_test.cc  flatbuffers-reflection.cc  flatbuffers-reflection.h  flatbuffers-reflection_test.cc  flatbuffers.h  flatbuffers_test.cc  hash-filter.cc  hash-filter.h  hash-filter_benchmark.cc  hash-filter_stats.cc  hash-filter_test.cc  hex-dumper.cc  hex-dumper.h  hex-dumper_test.cc  iostream.cc  iostream.h  iostream_test.cc  pod.h  pod_test.cc  rope.cc  rope.h  rope_test.cc  strings.cc  strings.h  strings_test.cc  utf.cc  utf.h  utf_test.cc  (+2 more)
(+71 files in other folders)
