module(name = "trunk", repo_name = "org_iceboy_trunk")

bazel_dep(name = "abseil-cpp", version = "20250127.1")
bazel_dep(name = "boost.asio", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.beast", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.endian", version = "1.87.0")
bazel_dep(name = "boost.icl", version = "1.87.0")
bazel_dep(name = "boost.log", version = "1.87.0")
bazel_dep(name = "boost.process", version = "1.87.0")
bazel_dep(name = "boost.smart_ptr", version = "1.87.0")
bazel_dep(name = "boost.system", version = "1.87.0")
bazel_dep(name = "boringssl", version = "0.20250311.0")
bazel_dep(name = "flatbuffers", version = "25.2.10")
bazel_dep(name = "google_benchmark", version = "1.9.2")
bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "platforms", version = "0.0.11")
